<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/general">
        <menu>
            <item android:title="@string/profile"
                android:icon="@drawable/ic_profile_black_24dp" />

            <item android:title="@string/achievements"
                android:icon="@drawable/ic_achievements_black_24dp" />

            <item android:title="@string/tasks"
                android:icon="@drawable/ic_tasks_black_24dp" />
        </menu>
    </item>

    <item android:title="@string/system">
        <menu>
            <item android:title="@string/settings"
                android:icon="@drawable/ic_settings_black_24dp" />

            <item android:id="@+id/main_loginRegister"
                android:title="@string/login_logout"
                android:icon="@drawable/ic_loginlogout_24" />
        </menu>

    </item>
</menu>