<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".LoginActivity"
    android:id="@+id/drawer_layoutLogin"
    >
    <ScrollView android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="20dp"
            android:paddingRight="24dp">

            <!-- Logo / Title -->
            <TextView
                android:id="@+id/logoTitle"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/luckiest_guy"
                android:text="@string/logo"
                android:textColor="@color/colorPrimary"
                android:textSize="55sp"
                android:transitionName="logo_title" />

            <TextView
                android:id="@+id/logoText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/signInText"
                android:textColor="@color/colorPrimaryDark"
                android:transitionName="logo_text" />


            <!-- Email label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lgn_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:transitionName="input_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password label -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lgn_pw"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:transitionName="input_pw"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inp_login_pw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- Login Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:onClick="loginUser"
                android:padding="12dp"
                android:text="@string/login"
                android:transitionName="button_action"
                app:backgroundTint="@color/colorPrimaryDark">

            </com.google.android.material.button.MaterialButton>

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/NoAccount"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:transitionName="btn_text" />
        </LinearLayout>

    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>